--- a/.github/workflows/merger.yml
+++ b/.github/workflows/merger.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Run a multi-line script
       run: |
-        mkdir dist
+        mkdir -p dist
         cat src/*.js > dist/hugo_shortcodes_netlify_cms.js
     - name: Add & Commit files
       run: |
